<resources>
    <string name="app_name">HW04_Gymlog_V3.0.0</string>
    <string name="exercise">Exercise</string>
    <string name="enter_an_exercise">Enter an Exercise</string>
    <string name="weight">Weight</string>
    <string name="enter_a_weight">Enter a Weight</string>
    <string name="enter_reps">Enter Reps</string>
    <string name="reps">Reps</string>
    <string name="log">Log!</string>
    <string name="nothing_to_show_time_to_hit_the_gym">nothing_to_show_time_to_hit_the_gym</string>
    <string name="login_welcome">Welcome to the GymLog. \nPlease Sign in.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
<<<<<<< HEAD
    <string name="preference_file_key">daclinkPreferenceFileNameGymlog</string>
    <string name="preference_userId_key">daclinkPreferenceUserIdKeyGymLog</string>
=======
>>>>>>> ea1f6e9bbdb3754b4482c53886d5911eb7c2b88c
</resources>